--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Build Folders (The compiled output)
-Back-end/bin/
-Back-end/obj/
+Learning-Vue-2/Back-end/Learning-Vue-2/bin/
+Learning-Vue-2/Back-end/Learning-Vue-2/obj/
 
 # User-specific files
 *.rsuser
